2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow multiple "to"-conversions in one expression (e.g. "5 m/s to hex to ft to h = 0xE6AF.1E*ft∕h)

2019-05-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Divide value with time units by hours if time format is used

2019-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not add current calculation again to history after removing (or moving) history item, when calculate-as-you-type is activated
	* Do not clear result after removal of history item, if not the current result was removed

2019-05-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce the height of the result widget

2019-05-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for automatic uppdates of self-contained binaries
	* Add check for updates menu item

2019-05-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix report bug on Windows

2019-05-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved handling of vectors and matrices in insert function dialog
	* Fixes and improvements for old gtk versions
	* --without-local-help configure option
	* Configurable time limit for plot

2019-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Gnome shell search provider

2019-05-01 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Dark theme setting on Windows

2019-04-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* History search
	* Fix button order in some dialogs

2019-04-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved handling of long history bookmarks
	* Only add message to history when expression consists of error(), warning(), or message() function
	* Interpret text after hashtag (#), in expression, as comments (add as separate history item if expression begins with double hashtags)
	* Fix move to top for last history item

2019-04-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Configurable number of lines in expression entry