@@ -1613,7 +1613,7 @@ Putting <quote> to </quote> followed by an expression at the end of the mathemat
 </varlistentry>
 <varlistentry>
 <term>hex / hexadecimal</term>
-<listitem><para>Show as hexadecimal number (e.g. <quote>623 to hex = 026F</quote>).</para></listitem> 
+<listitem><para>Show as hexadecimal number (e.g. <quote>623 to hex = 026F</quote>). Append an integer to specify the number of bits (e.g. <quote>4 to hex16 = 0004</quote>).</para></listitem></para></listitem> 
 </varlistentry>
 <varlistentry>
 <term>sexa / sexagesimal</term>
